--- a/render.yaml
+++ b/render.yaml
@@ -5,11 +5,11 @@ services:
     plan: free  # You can change this to 'standard' or 'pro' based on your needs
     buildCommand: 'npm install'
     startCommand: 'npm start'
-    github:
+    
       repo: https://github.com/grewap17/CourseHawk
       branch: main  # The branch you want to deploy from
     autoDeploy: true  # Set to false if you don't want auto-deploy
     envVars:
       - key: NODE_ENV
         value: production
-    regions: oregon  # You can choose from other Render regions like 'california', 'virginia', etc.
+    region: oregon  # You can choose from other Render regions like 'california', 'virginia', etc.
